// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker disabled date 1`] = `
Array [
  <div
    class="ant-picker"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select date"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-picker-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-picker-panel-container"
    >
      <div
        class="ant-picker-panel-layout"
      >
        <div
          class="ant-picker-panel ant-picker-panel-focused"
          tabindex="-1"
        >
          <div
            class="ant-picker-date-panel"
          >
            <div
              class="ant-picker-header"
            >
              <button
                class="ant-picker-header-super-prev-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-super-prev-icon"
                />
              </button>
              <button
                class="ant-picker-header-prev-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-prev-icon"
                />
              </button>
              <div
                class="ant-picker-header-view"
              >
                <button
                  class="ant-picker-month-btn"
                  tabindex="-1"
                  type="button"
                >
                  Nov
                </button>
                <button
                  class="ant-picker-year-btn"
                  tabindex="-1"
                  type="button"
                >
                  2016
                </button>
              </div>
              <button
                class="ant-picker-header-next-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-next-icon"
                />
              </button>
              <button
                class="ant-picker-header-super-next-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-super-next-icon"
                />
              </button>
            </div>
            <div
              class="ant-picker-body"
            >
              <table
                class="ant-picker-content"
              >
                <thead>
                  <tr>
                    <th>
                      Su
                    </th>
                    <th>
                      Mo
                    </th>
                    <th>
                      Tu
                    </th>
                    <th>
                      We
                    </th>
                    <th>
                      Th
                    </th>
                    <th>
                      Fr
                    </th>
                    <th>
                      Sa
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled"
                      title="2016-10-30"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        30
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-end"
                      title="2016-10-31"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        31
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-start ant-picker-cell-in-view"
                      title="2016-11-01"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        1
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-02"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        2
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-03"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        3
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-04"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        4
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-05"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        5
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-06"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        6
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-07"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        7
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-08"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        8
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-09"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        9
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-10"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        10
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-11"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        11
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-12"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        12
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-13"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        13
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-14"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        14
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-15"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        15
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-16"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        16
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-17"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        17
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-18"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        18
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-19"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        19
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-20"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        20
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                      title="2016-11-21"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        21
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view ant-picker-cell-today"
                      title="2016-11-22"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        22
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-23"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        23
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-24"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        24
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-25"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        25
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-26"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        26
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-27"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        27
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-28"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        28
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2016-11-29"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        29
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-end ant-picker-cell-in-view"
                      title="2016-11-30"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        30
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-start"
                      title="2016-12-01"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        1
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-02"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        2
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-03"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        3
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-04"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        4
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-05"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        5
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-06"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        6
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-07"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        7
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-08"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        8
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-09"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        9
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2016-12-10"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        10
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="ant-picker-footer"
          >
            <a
              aria-disabled="true"
              class="ant-picker-today-btn ant-picker-today-btn-disabled"
            >
              Today
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`DatePicker prop locale should works 1`] = `
Array [
  <div
    class="ant-picker"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Избери дата"
        readonly=""
        size="12"
        title="2000-01-01"
        value="2000-01-01"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-picker-clear"
        role="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-picker-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-picker-panel-container"
    >
      <div
        class="ant-picker-panel-layout"
      >
        <div
          class="ant-picker-panel ant-picker-panel-focused"
          tabindex="-1"
        >
          <div
            class="ant-picker-date-panel"
          >
            <div
              class="ant-picker-header"
            >
              <button
                class="ant-picker-header-super-prev-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-super-prev-icon"
                />
              </button>
              <button
                class="ant-picker-header-prev-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-prev-icon"
                />
              </button>
              <div
                class="ant-picker-header-view"
              >
                <button
                  class="ant-picker-month-btn"
                  tabindex="-1"
                  type="button"
                >
                  јан
                </button>
                <button
                  class="ant-picker-year-btn"
                  tabindex="-1"
                  type="button"
                >
                  2000
                </button>
              </div>
              <button
                class="ant-picker-header-next-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-next-icon"
                />
              </button>
              <button
                class="ant-picker-header-super-next-btn"
                tabindex="-1"
                type="button"
              >
                <span
                  class="ant-picker-super-next-icon"
                />
              </button>
            </div>
            <div
              class="ant-picker-body"
            >
              <table
                class="ant-picker-content"
              >
                <thead>
                  <tr>
                    <th>
                      пo
                    </th>
                    <th>
                      вт
                    </th>
                    <th>
                      ср
                    </th>
                    <th>
                      че
                    </th>
                    <th>
                      пе
                    </th>
                    <th>
                      сa
                    </th>
                    <th>
                      нe
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="ant-picker-cell"
                      title="1999-12-27"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        27
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="1999-12-28"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        28
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="1999-12-29"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        29
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="1999-12-30"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        30
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-end"
                      title="1999-12-31"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        31
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-start ant-picker-cell-in-view ant-picker-cell-selected"
                      title="2000-01-01"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        1
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-02"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        2
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-03"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        3
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-04"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        4
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-05"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        5
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-06"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        6
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-07"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        7
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-08"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        8
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-09"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        9
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-10"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        10
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-11"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        11
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-12"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        12
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-13"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        13
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-14"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        14
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-15"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        15
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-16"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        16
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-17"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        17
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-18"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        18
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-19"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        19
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-20"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        20
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-21"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        21
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-22"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        22
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-23"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        23
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-24"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        24
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-25"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        25
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-26"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        26
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-27"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        27
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-28"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        28
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-29"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        29
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-in-view"
                      title="2000-01-30"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        30
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="ant-picker-cell ant-picker-cell-end ant-picker-cell-in-view"
                      title="2000-01-31"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        31
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell ant-picker-cell-start"
                      title="2000-02-01"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        1
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2000-02-02"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        2
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2000-02-03"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        3
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2000-02-04"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        4
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2000-02-05"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        5
                      </div>
                    </td>
                    <td
                      class="ant-picker-cell"
                      title="2000-02-06"
                    >
                      <div
                        class="ant-picker-cell-inner"
                      >
                        6
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="ant-picker-footer"
          >
            <a
              class="ant-picker-today-btn"
            >
              Днес
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`DatePicker support DatePicker.generatePicker 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select date"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
